--- a/raw/_quarto.yml
+++ b/raw/_quarto.yml
@@ -8,6 +8,7 @@ website:
       - href: index.qmd
         text: Home
       - 2023-01-27-israiliyat-women-rights.qmd
+      - 2023-01-28-colonial-migration-arab-gulf.qmd
 
 format:
   html:
